Fixed the spacing and different card sizing issue, now add the final touches of images and ensuring consistency with the hero image.

--- a/Harrison/visit/visit.css
+++ b/Harrison/visit/visit.css
@@ -83,6 +83,7 @@
     /* ============================================================
       Card Design
        ==========================================================*/
+    
     .card-div img {
       height: 250px;
       object-fit: cover;
@@ -93,13 +94,12 @@
       border-radius: 15px;
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
       margin-bottom: 20px;
-      height: 100%;
       display: flex;
       flex-direction: column;
     
     }
 
-    .card-div .card-body {
+    .card-body {
       padding: 20px;
       display: flex;
       flex-direction: column;
@@ -108,6 +108,10 @@
 
     .card-div .card-text {
       flex: 1;
+    }
+
+    .card-body .btn{
+      margin-top: auto;
     }
 
     .card-div .card-title {
